--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,9 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-
-# `openssl rand -base64 32`
-AUTH_SECRET=
-AUTH_URL=http://localhost:3000/api/auth
+POSTGRES_URL="postgres://default:2dNi7Fvujqzl@ep-square-mode-12989596-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:2dNi7Fvujqzl@ep-square-mode-12989596-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:2dNi7Fvujqzl@ep-square-mode-12989596.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-square-mode-12989596-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="2dNi7Fvujqzl"
+POSTGRES_DATABASE="verceldb"
