--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.5.7",
+    "@types/node": "^20.5.7",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
@@ -27,7 +27,7 @@
     "embla-carousel-autoplay": "^8.0.0-rc18",
     "embla-carousel-react": "^8.0.0-rc18",
     "lucide-react": "^0.306.0",
-    "next": "^14.0.2",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
